kitten/test/org/perses/fuzzer/compiler/scala/noncrash_output_2.txt
-- Error: mutant.scala:2:19 ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------

2 |trait PackageError tb . compile

  |                   ^^

  |                   end of statement expected but identifier found

1 error found
